2012-04-23 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Follow-up to bug #35882: Corrections to template subpart "terms acknowledged" on edit form
	* Follow-up 14 to feature #34447: Add hidden username if needed
	
2012-04-22 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #36433: Non-closed br tags in pi1/locallang.xml
	* Fix bug #36434: locallang.xml contains \n characters combination
	* Fix bug #15661 (old bug tracker): broken linefeed handling in plain text emails
	* Fix bug #36434: Broken linefeed handling in plain text emails
	* Fix bug #36442: t3lib_div::cHashParams is deprecated in TYPO3 4.7

2012-04-21 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Require div2007 0.10.0
	* Follow-up 12 to feature #34447: Avoid retrieving private key when no password is set
	* Follow-up to feature #36191: Remove left over debugging code
	* Follow-up 13 to feature #34447: Remove secured password from data array
	* Fix bug #15231 (old bug tracker): when generating username, the username is not shown in the preview page
	* Fix bug #13853 (old bug tracker): Changes in recordArray (hook registrationProcess_beforeConfirmCreate) does not show in preview

2012-04-20 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Remove global declarations from tx_srfeuserregister_tca
	* Fix bug #36383: module_sys_dmail_newsletter not removed from admin review email
	* Fix bug #36388: In preview mode, the list of user groups ends with suprfluous br
	* Follow-up 11 to feature #34447: Password edit when both username and email are disabled
	* Cleanup outdated hidden field for password_again in tx_srfeuserregister_marker
	* Remove unnecessary access to secure array
	* Add feature #36396: Always use character set utf-8 by default
	* Add feature #36398: Password needs to be entered again when cancelling the preview
	* Allow update of fe_users on setfixed

2012-04-19 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Follow-up 2 to feature #36006: Test whether extension tt_address is loaded